--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <div class="middle-container">
     <div class="profile">
-      <img class="prof-img" src="images/adarsh.png" alt="profile-img">
+      <img class="prof-img" src="images/Dp.png" alt="profile-img">
       <h2>Hello.</h2>
       <p class="intro">I am a Web Developer. I started learning to code because I wanted to make my own video games and applications. Over time, I have gained a wealth of experience designing and developing web applications.</p>
     </div>
