--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="profile">
       <img class="prof-img" src="images/Dp.png" alt="profile-img">
       <h2>Hello.</h2>
-      <p class="intro">I am a Web Developer. I started learning to code because I wanted to make my own video games and applications. Over time, I have gained a wealth of experience designing and developing web applications.</p>
+      <p class="intro">I am a Web Developer. I started learning to code because I wanted to make my websites and applications. Over time, I have gained a wealth of experience designing and developing web applications.</p>
     </div>
     <hr>
     <div class="skills">
@@ -33,14 +33,14 @@
         <img class="webd-img" src="images/webd.png" alt="web-img">
         <h3>Design & Development</h3>
         <p>I can design and develop websites using:-
-        HTML, CSS, Bootstrap, JavaScript, JQuery..</p>
+        HTML, CSS, Bootstrap, JavaScript..</p>
 
       </div>
       <div class="skill-row">
         <img class="java-img" src="images/java.png" alt="java-img">
 
-        <h3>Java</h3>
-        <p>I have very good knowledge about java programming language.</p>
+        <h3>C++</h3>
+        <p>I have very good knowledge about c++ programming language and Data Structures.</p>
 
       </div>
     </div>
@@ -58,7 +58,7 @@
     <a class="twitter"  href="https://twitter.com/AdarshPawar77"><i class="fab fa-twitter fa-2x"></i></a>
     <a class="insta"  href="https://www.instagram.com/adarsh.pawar77/"><i class="fab fa-instagram fa-2x"></i></a>
     <a class="mail" href="mailto:pawar.adarsh8178@gmail.com"><i class="fas fa-envelope fa-2x"></i></a>
-    <p class="copyright">© 2021 Adarsh Pawar</p>
+    <p class="copyright">© 2023 Adarsh Pawar</p>
   </div>
 </body>
 
