--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
       </div>
       <div class="skill-row">
-        <img class="java-img" src="images/java.png" alt="java-img">
+        <img class="java-img" src="images/c++.png" alt="java-img">
 
         <h3>C++</h3>
         <p>I have very good knowledge about c++ programming language and Data Structures.</p>
